gpu/config/gpu_driver_bug_list_json.cc
@@ -19,7 +19,7 @@ const char kGpuDriverBugListJson[] = LONG_STRING_CONST(
 {
   "name": "gpu driver bug list",
   // Please update the version number whenever you change this file.
-  "version": "8.88",
+  "version": "8.89",
   "entries": [
     {
       "id": 1,
@@ -1955,6 +1955,18 @@ LONG_STRING_CONST(
       "gl_renderer": "PowerVR SGX.*",
       "features": [
         "avda_no_eglimage_for_luminance_tex"
+      ]
+    },
+    {
+      "id": 181,
+      "description": "glTexStorage* are buggy when base mipmap level is not 0",
+      "cr_bugs": [640506],
+      "os": {
+        "type": "macosx"
+      },
+      "vendor_id": "0x8086",
+      "features": [
+        "reset_base_mipmap_level_before_texstorage"
       ]
     }
   ]
